--- a/main.html
+++ b/main.html
@@ -10,6 +10,46 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<form>
+		<label for="name">Name: </label>
+		<input type="text" id="name" placeholder="name" required>
+		<br>
+		<label for="email">Email: </label>
+		<input type="email" id="email" placeholder="Email" required>
+		<br>
+		<label>Gender</label>
+		<input type="radio" id="gender_m" required>
+		<label for="gender_m">Male</label>
+		<input type="radio" id="gender_f" required>
+		<label for="gender_f">Female</label>
+		<br>
+		<label for="cars">Car Brands</label>
+		<select id="cars">
+			<option>--Please choose an option--</option>
+			<option>BMW</option>
+			<option>AUDI</option>
+			<option>HYUNDI</option>
+		</select>
+		<br>
+		<label for="age">Age: </label>
+		<input type="number" id="age" placeholder="Age" required>
+		<br>
+		<label for="dob">Date of Birth: </label>
+		<input type="date" id="dob" required>
+		<br>
+		<label for="tel">Phone Number: </label>
+		<input type="tel" id="tel" placeholder="xxx-xxx-xxx">
+		<br>
+		<label for="password">Password: </label>
+		<input type="password" id="password" placeholder="password" required>
+		<br>
+		<br>
+		<input type="checkbox" id="tos" required>
+		<label for="tos">I agree to the TOS</label>
+		<br>
+		<br>
+		<input type="submit">
+	</form>
 
 </body>
 
