--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<form>
+	<form method="post">
 		<label for="name">Name: </label>
 		<input type="text" id="name" placeholder="name" required>
 		<br>
@@ -18,9 +18,9 @@
 		<input type="email" id="email" placeholder="Email" required>
 		<br>
 		<label>Gender</label>
-		<input type="radio" id="gender_m" required>
+		<input type="radio" id="gender_m" name="gender" required>
 		<label for="gender_m">Male</label>
-		<input type="radio" id="gender_f" required>
+		<input type="radio" id="gender_f" name="gender" required>
 		<label for="gender_f">Female</label>
 		<br>
 		<label for="cars">Car Brands</label>
@@ -48,7 +48,7 @@
 		<label for="tos">I agree to the TOS</label>
 		<br>
 		<br>
-		<input type="submit">
+		<button>Submit</button>
 	</form>
 
 </body>
