--- a/main.html
+++ b/main.html
@@ -48,7 +48,7 @@
 		<label for="tos">I agree to the TOS</label>
 		<br>
 		<br>
-		<button>Submit</button>
+		<button type="submit">Submit</button>
 	</form>
 
 </body>
